--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h6>This Going to be my MENU section</h6>
+    </header>
+    <main>
+      <%= yield %>
+    </main>
+    <footer></footer>
   </body>
 </html>
